--- a/TodoAppA1/TodoAppA1.csproj
+++ b/TodoAppA1/TodoAppA1.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="app\todo-list-wrapper\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
@@ -146,6 +147,8 @@
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1-vsdoc.js" />
+    <Content Include="app\todo-list-wrapper\todo-list-wrapper.directive.js" />
+    <Content Include="app\todo-list-wrapper\todo-list-wrapper.controller.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
