--- a/TodoAppA1/TodoAppA1.csproj
+++ b/TodoAppA1/TodoAppA1.csproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="app\services\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
@@ -149,6 +150,7 @@
     <Content Include="Scripts\jquery-3.1.1-vsdoc.js" />
     <Content Include="app\todo-list-wrapper\todo-list-wrapper.directive.js" />
     <Content Include="app\todo-list-wrapper\todo-list-wrapper.controller.js" />
+    <Content Include="app\services\todo-list-helper.service.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
